<resources>
    <string name="app_name">Dokuter</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Doctor Appointment</string>
    <string name="slide_1_desc">Book an appointment with the right doctor.</string>

    <string name="slide_2_title">Online Chat</string>
    <string name="slide_2_desc">Too busy to see a doctor!Chat online instead.</string>

    <string name="slide_3_title">Medicine Delivery</string>
    <string name="slide_3_desc">Get medicines delivered to your doorstep.</string>

    <string name="slide_4_title">Medical History</string>
    <string name="slide_4_desc">Keep your medical history handy.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="heading">Item Header</string>
    <string name="paragraph">Item description</string>
    <string name="home">Home</string>
    <string name="list">YOUR LIST</string>
    <string name="profile">PROFILE</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nam nulla orci, pellentesque ac interdum in, dignissim non libero. Integer tempus volutpat dictum.
        Integer vulputate ex vel orci pretium, eu porttitor mauris lobortis.
        Nullam eget odio ultricies nunc iaculis porttitor in et ipsum
    </string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Both</item>
    </string-array>
    <string name="title_activity_search_appointment">Find &amp; Book</string>
    <string name="search_appointment">Doctors, specialities, clinics, hospitals</string>
    <string name="find_and_view">Find &amp; View</string>
    <string name="faq_description_counter">0 / 1000</string>
    <string name="faq_title_counter">0 / 40</string>
    <string name="faq_problem_type_hint">Problem Type - Treatment pref.</string>
    <string name="faq_profile_select_hint">Select Profile</string>
    <string name="faq_title_hint">Title (min 10 chars)</string>
    <string name="faq_desc_hint">Description (min 100 chars)</string>
    <string name="faq_for_text">For</string>
    <string name="faq_activity_label">Ask free question</string>
    <string name="top_specialities">Top specialities</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="doctor_image">Doctor Image</string>
    <string name="name">John Q. Public</string>
    <string name="doctor_background_image">Doctor Background Image</string>
    <string name="services">Hypertension Treatment \nChronic Disease \nDiabetes Management</string>
    <string name="specialization">General Physician \nFamily Physician \nCardiologist</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="login_using_email">Login using old ways</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_no">Phone No</string>

    <string-array name="consultation_array">
        <item>Follow Up</item>
        <item>Consultation</item>
    </string-array>

    <string-array name="time_slot_array">
        <item>09:30 AM - 12:00 PM</item>
        <item>01:30 PM - 03:00 PM</item>
        <item>03:30 AM - 05:00 PM</item>
        <item>05:30 AM - 9:00 PM</item>
    </string-array>

    <string-array name="profiles">
        <item>My Self</item>
    </string-array>
    
    <string name="doc_exp">Experience: %1$s</string>
    <string name="doc_image_link">/images/profile_pics/%1$s</string>

</resources>