<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.treebricks.dokuter.FAQActivity">

    <TextView
        android:id="@+id/forProfile"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingEnd="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingStart="15dp"
        android:text="@string/faq_for_text"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spSelectPatient"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:entries="@array/profiles"
        android:spinnerMode="dropdown"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/forProfile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/divider1"
        style="@style/Divider"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/spSelectPatient" />

    <Spinner
        android:id="@+id/spProblemType"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:spinnerMode="dropdown"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <LinearLayout
        android:id="@+id/divider2"
        style="@style/Divider"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/spProblemType" />

    <LinearLayout
        android:id="@+id/llFaqTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/divider2">

        <TextView
            android:id="@+id/tvFaqTitleCharCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:text="@string/faq_title_counter"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etFaqTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/faq_title_hint"
            android:inputType="text"
            android:maxLength="40"
            android:scrollbars="vertical"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/divider3"
        style="@style/Divider"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llFaqTitle" />

    <LinearLayout
        android:id="@+id/llFaqDesc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3">

        <TextView
            android:id="@+id/tvFaqDescCharCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:text="@string/faq_description_counter"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etFaqDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/faq_desc_hint"
            android:inputType="textMultiLine"
            android:maxLength="1000"
            android:scrollbars="vertical"
            android:textSize="16sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>