<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="70dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:iiv_color="@color/md_black_1000"
                    app:iiv_icon="cmd_briefcase" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="27 Yrs experience" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:iiv_color="@color/md_black_1000"
                    app:iiv_icon="cmd_thumb_up" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="94%" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:iiv_color="@color/md_black_1000"
                    app:iiv_icon="cmd_cash_multiple" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="$ 500 Consultation fees" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:iiv_color="@color/md_black_1000"
                    app:iiv_icon="cmd_hospital_building" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/slide_2_desc" />

                        <RatingBar
                            android:id="@+id/ratingBar"
                            style="@style/Widget.AppCompat.RatingBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:isIndicator="false"
                            android:numStars="5"
                            android:rating="3.7" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_chamber_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/slide_4_desc" />

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/chamber_map"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:iiv_color="@color/md_black_1000"
                    app:iiv_icon="cmd_clock_outline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Visits Tomorrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="09:00 AM - 03:30 PM"
                        style="@style/TextAppearance.AppCompat.Medium"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:text="All Timing"
                        android:textColor="?attr/colorPrimary"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:iiv_color="@color/md_black_1000"
                    app:iiv_icon="cmd_umbrella" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Services"
                        style="@style/TextAppearance.AppCompat.Medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/services" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:text="All Services"
                        android:textColor="?attr/colorPrimary"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:iiv_color="@color/md_black_1000"
                    app:iiv_icon="cmd_cube_outline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Specialization"
                        style="@style/TextAppearance.AppCompat.Medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/specialization" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:text="All Specialization"
                        android:textColor="?attr/colorPrimary"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>